# C-Timesheet-App

./: CMakeLists.txt  ignore.gitignore  main.cpp  sak.cpp
docs/: docs.txt
include/: attendences.hpp  tasks.hpp  users.hpp
src/: atttendences.cpp  tasks.cpp  users.cpp
tests/: main.cpp  san.cpp
